# tflite_main_proj

./: .gitignore  README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/child_image/mcuboot/: mcuboot.conf
app/child_image/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.overlay
app/conf/: prj.conf  rtt.conf  tf.conf
app/src/: main.c  main.cpp
